--- a/disk/circleShowcase.html
+++ b/disk/circleShowcase.html
@@ -129,6 +129,23 @@
 
         </div>
     </div>
-    
+
+    <div class="footer">
+        <br/>
+        <a href="../Docs/_build/html/index.html" target="_blank">Full Documentation</a></p>
+        <a href="../Docs/papers" target="_blank">Papers Referenced</a>
+        <br/>
+        <!--
+        <ul>
+            <li>
+                <a href="../Docs/_build/html/index.html" target="_blank">Full Documentation</a></p>
+            </li>
+            <li>
+                <a href="../Docs/papers">Papers Referenced</a>
+            </li>
+        </ul>
+    -->
+    </div>
+
 </body>
 </html>
