change function names

--- a/GraphComparison/GraphComparison.html
+++ b/GraphComparison/GraphComparison.html
@@ -108,8 +108,7 @@
       <button type="submit" action="javascript:void(0);" onClick="showAnims('graph');">Show Graphs</button>
       <button type="submit" action="javascript:void(0);" onClick="showAnims('anim');">Show Anim</button>
 
+    <script src="ICL_Classes.js"></script>
     <script src = "superclass.js"></script>
-    <script>
-    </script>
   </body>
 </html>
