change filepath links

--- a/disk/circleShowcase.html
+++ b/disk/circleShowcase.html
@@ -147,7 +147,7 @@
 
     <div class="footer">
         <br/>
-        <a href="../Docs/_build/html/index.html" target="_blank">Full Documentation</a></p>
+        <a href="../Docs/_build/html/" target="_blank">Full Documentation</a></p>
         <a href="../Docs/papers" target="_blank">Papers Referenced</a>
         <br/>
         <!--
