--- a/disk/circleShowcase.html
+++ b/disk/circleShowcase.html
@@ -148,7 +148,9 @@
     <div class="footer">
         <br/>
         <a href="../Docs/_build/html/" target="_blank">Full Documentation</a></p>
-        <a href="../Docs/papers" target="_blank">Papers Referenced</a>
+        <p>
+            This research is supported by the National Science Foundation under grant # CCF-AF 1813940 (RUI: Search, Evacuation and Reconfiguration with Coordinated Mobile Agents).
+        </p>
         <br/>
         <!--
         <ul>
