--- a/disk/circleShowcase.html
+++ b/disk/circleShowcase.html
@@ -49,19 +49,54 @@
         <span style="width: 100%;" class='openButton' onclick="openNav()">&#9776;</span>
     </div>
 
-    <h1>Robots Evacuating a Disk</h1>
+    <h1>Robots Evacuating a Unit Disk</h1>
     <!-- Contains the algorithm name and wireless status -->
     <h2 id="subheader"></h2>
 
     <!-- Splash page for release soon. Need to make it more informative and less wide -->
-    <button class="w3-btn" onclick="document.getElementById('id01').style.display='block'">Show panel</button>
+    <button id="showhelp" class="w3-btn" style="display:none; background-color:'green'; color:'white'" onclick="document.getElementById('splash').style.display='inline-block'; this.style.display='none'"><span style="font-size: '2em'">🛈</span> Show Help</button>
 
-    <div id="id01" class="w3-panel w3-green w3-display-container" style="display:none">
-        <span onclick="this.parentElement.style.display='none'; document.getElementByClass('w3-btn').style.display='block'" class="w3-button w3-display-topright">X</span>
-        <p>Click on the Menu Icon in the top left to see available algorithms.</p>
-        <p>
-            The Main 2 panels you will se below are different
-        </p>
+    <div id="splash" class="w3-panel w3-green w3-display-container" style="display:inline-block; width: 50%;">
+        <span onclick="this.parentElement.style.display='none'; document.getElementById('showhelp').style.display='inline-block'; document.getElementById('showhelp').style.backgroundColor='green'; document.getElementById('showhelp').style.color='white';" class="w3-button w3-display-topright">X</span>
+        <div style="font-size: 14px;">
+            <p style="font-size: 1.75em;">Click on the Menu Icon in the top left to see available algorithms.</p>
+            <br />
+            <p style="font-size: 1.25em;">
+                The Main 2 panels you will see below are both different visual representations of the same algorithm.
+            </p>
+            <br />
+
+            <p style="font-size: 1.25em;">
+                The panel on the left, which we refer to as the "Field" shows the actual position of the robots at
+                any given time on their trajectories.
+                The reference point of 0 degrees occurs at x=1 on the unit disk shown below.
+                Before an algorithm starts, you must select a location for the exit by hovering around the disk, and clicking
+                when you find a suitable exit location. The algorithm will then begin.
+            </p>
+            <br />
+
+            <p style="font-size: 1.25em;">
+                The panel on the right, which we refer to as the "Graph", show the absolute distance of each robot from the current
+                exit position, in units.
+                The current time and number of frames that the animation has played for will be displayed in the top left.
+                Below the time, are four buttons which can be used to replay, slow, rewind, and stop the animation playback,
+                once it has finished. Clicking "Slow" more than once can slow the animation down more
+                in whichever direction it is currently playing.
+                In the top right of the Graph is the robot legend. This shows the Robot ID number, color, and whether or not the robot is
+                designated as priority. If it is a priority robot, it will be shown with a (P).
+            </p>
+            <br />
+
+            <p style="font-size: 1.25em;">
+                Finally, when there priority robots in the algorithm, an extra panel will show below the Field and Graph.
+                This is a special graph that we call the Worst Case Graph.
+                It shows the distance of the priority from one of the servants in a simulation of the algorithm where no exit is present.
+                This graph allows us to see the time it would take the algorithm to finish, based on the frame number.
+                If the SERVANT were to find the exit on any of the given frame numbers, the "Time to Finish" datapoint
+                will show us the worst case time that the algorithm would finish based on how far the priority currently
+                is from the servant which found the exit.
+            </p>
+        </div>
     </div>
     <script src='circleShowcase.js'></script>
 
@@ -88,19 +123,21 @@
             <div id="A" class='desc'>
         </a>
         <ol><b><em><u>Steps:</u></em></b>
-            <li>
-                The robots go to the perimeter at the same angle.
-            </li>
-            <li>
-                They travel opposite directions once they reach the perimeter. e.g, If Robot 1 goes clockwise, Robot 2 goes counter-clockwise.
-            </li>
-            <li>
-                The robots move along the perimeter until one of them finds the exit, in which case they will <span class='tooltip'>intercept the other's path (in the case of Face-To-Face communication). <span class='tooltiptext'>The robot which
-                        finds the exit will calculate a path (chord) across the circle s.t. the distance of its chord is equal to the arc that the other would have travelled along the perimeter in the time it takes to cross the chord. </span></span>
-            </li>
-            <li>
-                The robots meet at the end of the point of interception and travel directly back to the exit.
-            </li>
+            <ol>
+                <li>
+                    The robots go to the perimeter at the same angle.
+                </li>
+                <li>
+                    They travel opposite directions once they reach the perimeter. e.g, If Robot 1 goes clockwise, Robot 2 goes counter-clockwise.
+                </li>
+                <li>
+                    The robots move along the perimeter until one of them finds the exit, in which case they will <span class='tooltip'>intercept the other's path (in the case of Face-To-Face communication). <span class='tooltiptext'>The robot which
+                            finds the exit will calculate a path (chord) across the circle s.t. the distance of its chord is equal to the arc that the other would have travelled along the perimeter in the time it takes to cross the chord. </span></span>
+                </li>
+                <li>
+                    The robots meet at the end of the point of interception and travel directly back to the exit.
+                </li>
+            </ol>
         </ol>
         <img src='../resources/intercept.png' />
         <p class='center'>
@@ -120,15 +157,17 @@
             vertical axis of origin. If it has not been intercepted or notified about the exit at the point, it will return to the perimeter.</span></span>, and Φ being the angle to take the detour at.
     This algorithms shares the same first three steps as algorithm A.
     <ol><b><em><u>Steps (Algorithm B):</u></em></b>
-        <li>
-            The robots follow the same trajectory as they would in <b>Algorithm A</b>, for a certain amount of time X.
-        </li>
-        <li>
-            If the robots have travelled the distance X without being notified of the exit, they initiate the detour phase at angle Φ relative to the tangent to the circle at that point.
-        </li>
-        <li>
-            If, after the detour phase the exit has not been found, the robots continue moving around the perimeter and follow the normal interception methods.
-        </li>
+        <ol>
+            <li>
+                The robots follow the same trajectory as they would in <b>Algorithm A</b>, for a certain amount of time X.
+            </li>
+            <li>
+                If the robots have travelled the distance X without being notified of the exit, they initiate the detour phase at angle Φ relative to the tangent to the circle at that point.
+            </li>
+            <li>
+                If, after the detour phase the exit has not been found, the robots continue moving around the perimeter and follow the normal interception methods.
+            </li>
+        </ol>
     </ol>
 
     <img src='../resources/detour.png' />
@@ -140,6 +179,7 @@
     The robot which finds the exit will travel less distance to intercept the other if it is currently in its detour phase,
     thus lowering the overall time.
     The only time which this does not apply is for a smaller set of exit positions, which are observed after the detour phase.
+    <br />
     <br />
     <b><em><u>Algorithm referenced in: </u></em></b><br />
     <em>Jurek Czyzowicz et al (2015). Evacuating Robots From a Disk Using Face-To-Face Communication.</em>
@@ -155,18 +195,23 @@
             Φ being the angle to take the detour at, and λ being the time for at which the robot starts to travel directly to the central axis from its detour.
             This algorithm shares the same first three steps as Algorithm A.
             <ol><b><em><u>Steps (Algorithm C):</u></em></b>
-                <li>
-                    The robots follow the same trajectory as they would in <b>Algorithm A</b>, for a certain amount of time X.
-                </li>
-                <li>
-                    If the robots have travelled the distance X without being notified of the exit, they initiate the <span class='tooltip'>triangular detour phase<span class='tooltiptext'>The robot will go away from the perimeter at an angle Φ for
-                            time λ, and then travel DIRECTLY toward and stop at the vertical axis of origin. If it has not been intercepted or notified about the exit at the point, it will return to the perimeter using the shortest path back to the
-                            point it came from.</span></span> at angle Φ, for time λ.
-                </li>
-                <li>
-                    If, after the triangular detour phase the exit has not been found, the robots continue moving around the perimeter and follow the normal interception methods.
-                </li>
+                <ol>
+                    <li>
+                        The robots follow the same trajectory as they would in <b>Algorithm A</b>, for a certain amount of time X.
+                    </li>
+                    <li>
+                        If the robots have travelled the distance X without being notified of the exit, they initiate the <span class='tooltip'>triangular detour phase<span class='tooltiptext'>The robot will go away from the perimeter at an angle Φ
+                                for
+                                time λ, and then travel DIRECTLY toward and stop at the vertical axis of origin. If it has not been intercepted or notified about the exit at the point, it will return to the perimeter using the shortest path back to
+                                the
+                                point it came from.</span></span> at angle Φ, for time λ.
+                    </li>
+                    <li>
+                        If, after the triangular detour phase the exit has not been found, the robots continue moving around the perimeter and follow the normal interception methods.
+                    </li>
+                </ol>
             </ol>
+
 
             <img src='../resources/tri-detour.png' />
             <p class='center'>
@@ -178,6 +223,7 @@
             The robot which finds the exit will travel less distance to intercept the other if it is currently in its detour phase,
             thus lowering the overall time.
             The only time which this does not apply is for a smaller set of exit positions, which are observed after the detour phase.
+            <br />
             <br />
             <b><em><u>Algorithm referenced in: </u></em></b><br />
             <em>Jurek Czyzowicz et al (2015). Evacuating Robots From a Disk Using Face-To-Face Communication.</em>
@@ -191,22 +237,25 @@
         This algorithm takes two arguments, Q(α, β): α being this arc length that the priority robot will take until it makes a small detour, β being the angle (α + β) on the unit disk that the priority robot travels to,
         creating a chord. After this, the priority robot will travel in the opposite direction, back towards the point where it originally made the detour.
         <ol><b><em><u>Steps (Algorithm Priority 1):</u></em></b>
-            <li>
-                The robots go out to the perimeter at the same angle.
-            </li>
-            <li>
-                The servant will travel clockwise around the circle until it finds the exit and notifies the priority of its location.
-            </li>
-            <li>
-                The priority will travel counter-clockwise for time α, at which point it will make its detour.
-            </li>
-            <li>
-                The priority will travel to the angle (α + β).
-            </li>
-            <li>
-                The priority will travel clockwise until the exit is found.
-            </li>
+            <ol>
+                <li>
+                    The robots go out to the perimeter at the same angle.
+                </li>
+                <li>
+                    The servant will travel clockwise around the circle until it finds the exit and notifies the priority of its location.
+                </li>
+                <li>
+                    The priority will travel counter-clockwise for time α, at which point it will make its detour.
+                </li>
+                <li>
+                    The priority will travel to the angle (α + β).
+                </li>
+                <li>
+                    The priority will travel clockwise until the exit is found.
+                </li>
+            </ol>
         </ol>
+
         <br />
 
         <b><em><u>Algorithm referenced in: </u></em></b><br />
@@ -241,67 +290,68 @@
                 </li>
             </ol>
             <br />
+        </ol>
+        <b><em><u>Algorithm referenced in: </u></em></b><br />
+        <em>Jurek Czyzowicz et al (2018). God Save the Queen. In FUN, pp. 16:1–16:20.</em>
+        </div>
 
-            <b><em><u>Algorithm referenced in: </u></em></b><br />
-            <em>Jurek Czyzowicz et al (2018). God Save the Queen. In FUN, pp. 16:1–16:20.</em>
-            </div>
+        <!-- PRIORITY ALGORITHM -->
+        <a id="AlgQ2S1">
+            <div id="Q2S1" class='desc'>
+        </a>
+        <ol><b><em><u>Steps (Algorithm 2 Priority + 1 Servant):</u></em></b>
+            In this algorithm, we designate two of the robots as priority, and only one as the servant.
+            The algorithm terminates when at least one of the priority robots finds the exit.
+            The algorithm takes one argument, Q(α). α is the angle at which one servant and one priority will travel toward the perimeter.
+            We will denote the servant as S, and the two priority robots as P1 and P2.
+            14*pi/9 - 2*sqrt(3)/3
+            <ol>
+                <li>
+                    The robots S and P1 will travel to the perimeter at <span class="tooltip">angle α.<span class="tooltiptext">This is usually an angle located between (π, 3π/2)</span></span>
+                    P2 will travel to the perimeter at angle 0.
+                </li>
+                <li>
+                    P1 travels counter-clockwise until it finds the exit. P2 travels counter-clockwise until it finds the exit. Finally, S travels clockwise until it finds the exit.
+                </li>
+            </ol>
+        </ol>
+        <br />
 
-            <!-- PRIORITY ALGORITHM -->
-            <a id="Alg2Q1S">
-                <div id="Q2S1" class='desc'>
-            </a>
-            <ol><b><em><u>Steps (Algorithm 2 Priority + 1 Servant):</u></em></b>
-                In this algorithm, we designate two of the robots as priority, and only one as the servant.
-                The algorithm terminates when at least one of the priority robots finds the exit.
-                The algorithm takes one argument, Q(α). α is the angle at which one servant and one priority will travel toward the perimeter.
-                We will denote the servant as S, and the two priority robots as P1 and P2.
-                14*pi/9 - 2*sqrt(3)/3
-                <ol>
-                    <li>
-                        The robots S and P1 will travel to the perimeter at <span class="tooltip">angle α.<span class="tooltiptext">This is usually an angle located between (π, 3π/2)</span></span>
-                        P2 will travel to the perimeter at angle 0.
-                    </li>
-                    <li>
-                        P1 travels counter-clockwise until it finds the exit. P2 travels counter-clockwise until it finds the exit. Finally, S travels clockwise until it finds the exit.
-                    </li>
-                </ol>
-                <br />
+        We can show that this algorithm has an upper bound of 3.55 time units for angle α = 14π/9 - 2√3/3. The two worst-cases for the exit location in this
+        algorithm are: 2π - θ for some very small θ, or π - ((6√3 - 2)/9).
+        </div>
 
-                We can show that this algorithm has an upper bound of 3.55 time units for angle α = 14π/9 - 2√3/3. The two worst-cases for the exit location in this
-                algorithm are: 2π - θ for some very small θ, or π - ((6√3 - 2)/9).
-                </div>
+        <!-- PRIORITY ALGORITHM -->
+        <a id="AlgQ1S1Q1">
+            <div id="Q1S1Q1" class='desc'>1Q1S1Q
+        </a>
+        </div>
 
-                <!-- PRIORITY ALGORITHM -->
-                <a id="Alg1Q1S1Q">
-                    <div id="Q1S1Q1" class='desc'>1Q1S1Q
-                </a>
-                </div>
+        <!-- PRIORITY ALGORITHM -->
+        <a id="AlgQ1S4">
+            <div id="Q1S4" class='desc'>1Q4S
+        </a>
 
-                <!-- PRIORITY ALGORITHM -->
-                <a id="Alg1Q4S">
-                    <div id="Q1S4" class='desc'>1Q4S
-                </a>
+        <b><em><u>Algorithm referenced in: </u></em></b><br />
+        <em>Jurek Czyzowicz et al (2018). Priority Evacuation from a Disk Using Mobile Robots.</em>
+        </div>
 
-                <b><em><u>Algorithm referenced in: </u></em></b><br />
-                <em>Jurek Czyzowicz et al (2018). Priority Evacuation from a Disk Using Mobile Robots.</em>
-                </div>
+        <!-- PRIORITY ALGORITHM -->
+        <a id="AlgQ1S8">
+            <div id="Q1S8" class='desc'>1Q8S
+        </a>
+        </div>
 
-                <!-- PRIORITY ALGORITHM -->
-                <a id="Alg1Q8S">
-                    <div id="Q1S8" class='desc'>1Q8S
-                </a>
-                </div>
+        </div>
 
-                </div>
-
-                <div class="footer">
-                    <br />
-                    <a href="../Docs/_build/html/" target="_blank">Full Documentation</a></p>
-                    <p>
-                        This research is supported by the National Science Foundation under grant # CCF-AF 1813940 (RUI: Search, Evacuation and Reconfiguration with Coordinated Mobile Agents).
-                    </p>
-                    <br />
-                </div>
+        <div class="footer">
+            <br />
+            <a href="../Docs/_build/html/" target="_blank">Full Documentation</a></p>
+            <p>
+                This research is supported by the National Science Foundation under grant # CCF-AF 1813940 (RUI: Search, Evacuation and Reconfiguration with Coordinated Mobile Agents).
+            </p>
+            <br />
+        </div>
 
 </body>
 
