--- a/disk/circleShowcase.html
+++ b/disk/circleShowcase.html
@@ -108,7 +108,7 @@
         <div>
             <h2 style="color:black;">The Worst Case Visualizer</h2>
             <p>
-                Finally, when there priority robots in the algorithm, an extra panel will show below the Field and Graph.
+                When there priority robots in the algorithm, an extra panel will show below the Field and Graph.
                 This is a special graph that we call the Worst Case Visualizer.
                 It shows the distance of the priority from one of the servants in a simulation of the algorithm where no exit is present.
                 This graph allows us to see the time it would take the algorithm to finish, based on the frame number.
