Fix Alg B text size bug.

--- a/disk/circleShowcase.html
+++ b/disk/circleShowcase.html
@@ -169,7 +169,7 @@
         <em>Jurek Czyzowicz et al. (2015). Evacuating Robots From a Disk Using Face-To-Face Communication. Proceesings of CIAC, 2015 p. 140-152, 2015.</em>
     </div>
 
-    <a id="AlgB"><div id="B" class='w3-display-container desc'>
+    <a id="AlgB"><div id="B" class='w3-display-container desc'></a>
         <span onclick="this.parentElement.style.display='none'; document.getElementById('showhelp').style.display='inline-block'; document.getElementById('showhelp').style.backgroundColor='green'; document.getElementById('showhelp').style.color='white';" class="w3-button w3-display-topright">X</span>
         <h2 style="color:black;">Algorithm Steps:</h2>
         This algorithm takes two arguments, B(X, Φ); X being the arc length travelled before taking <span class='tooltip'>a detour<span class='tooltiptext'>The robot will go away from the perimeter at an angle Φ, and travel toward and stop at the
@@ -204,7 +204,7 @@
         <em>Jurek Czyzowicz et al. (2014). Evacuating Robots via Unknown Exit in a Disk. Proceesings of DISC 2014, LNCS 8784, pp. 122–136, 2014</em>
         <br />
         <em>Jurek Czyzowicz et al. (2015). Evacuating Robots From a Disk Using Face-To-Face Communication. Proceesings of CIAC, 2015 p. 140-152, 2015.</em>
-    </div></a>
+    </div>
 
     <!-- NORMAL ALGORITHM -->
     <a id="AlgC"><div id="C" class='w3-display-container desc'></a>
