--- a/disk/circleShowcase.html
+++ b/disk/circleShowcase.html
@@ -164,9 +164,9 @@
         </p>
 
         <b><em><u>Algorithm referenced in: </u></em></b><br />
-        <em>Jurek Czyzowicz et al. (2014). Evacuating Robots via Unknown Exit in a Disk. Proceesings of DISC 2014, LNCS 8784, pp. 122–136, 2014</em>
+        <em>Jurek Czyzowicz et al. (2014). Evacuating Robots via Unknown Exit in a Disk. Proceedings of DISC 2014, LNCS 8784, pp. 122–136, 2014</em>
         <br />
-        <em>Jurek Czyzowicz et al. (2015). Evacuating Robots From a Disk Using Face-To-Face Communication. Proceesings of CIAC, 2015 p. 140-152, 2015.</em>
+        <em>Jurek Czyzowicz et al. (2015). Evacuating Robots From a Disk Using Face-To-Face Communication. Proceedings of CIAC, 2015 p. 140-152, 2015.</em>
     </div>
 
     <a id="AlgB"><div id="B" class='w3-display-container desc'></a>
@@ -201,9 +201,9 @@
         <br />
         <br />
         <b><em><u>Algorithm referenced in: </u></em></b><br />
-        <em>Jurek Czyzowicz et al. (2014). Evacuating Robots via Unknown Exit in a Disk. Proceesings of DISC 2014, LNCS 8784, pp. 122–136, 2014</em>
+        <em>Jurek Czyzowicz et al. (2014). Evacuating Robots via Unknown Exit in a Disk. Proceedings of DISC 2014, LNCS 8784, pp. 122–136, 2014</em>
         <br />
-        <em>Jurek Czyzowicz et al. (2015). Evacuating Robots From a Disk Using Face-To-Face Communication. Proceesings of CIAC, 2015 p. 140-152, 2015.</em>
+        <em>Jurek Czyzowicz et al. (2015). Evacuating Robots From a Disk Using Face-To-Face Communication. Proceedings of CIAC, 2015 p. 140-152, 2015.</em>
     </div>
 
     <!-- NORMAL ALGORITHM -->
@@ -246,9 +246,9 @@
         <br />
         <br />
         <b><em><u>Algorithm referenced in: </u></em></b><br />
-        <em>Jurek Czyzowicz et al. (2014). Evacuating Robots via Unknown Exit in a Disk. Proceesings of DISC 2014, LNCS 8784, pp. 122–136, 2014</em>
+        <em>Jurek Czyzowicz et al. (2014). Evacuating Robots via Unknown Exit in a Disk. Proceedings of DISC 2014, LNCS 8784, pp. 122–136, 2014</em>
         <br />
-        <em>Jurek Czyzowicz et al. (2015). Evacuating Robots From a Disk Using Face-To-Face Communication. Proceesings of CIAC, 2015 p. 140-152, 2015.</em>
+        <em>Jurek Czyzowicz et al. (2015). Evacuating Robots From a Disk Using Face-To-Face Communication. Proceedings of CIAC, 2015 p. 140-152, 2015.</em>
     </div>
 
     <!-- PRIORITY ALGORITHM -->
